# BPlusTree

./: .clangd  .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: cmake.yml  static.yml
experimental/: MapSet.cpp  PairConstructible.cpp  Private.hpp  Public.hpp  copy.cpp  dependantTemplate.cpp  dependantTemplate.hpp  indexor.cpp  polymorphicNode.cpp  privateClass.cpp
include/: BPlusTemplate.hpp  BPlusTree.hpp  BPlusTreeDeclarations.hpp  Concepts.hpp  InternalNode.hpp  Iterator.hpp  LeafNode.hpp  Map.hpp  NodeHandler.hpp  Set.hpp
src/: main.cpp  test.cpp
tests/: CMakeLists.txt  insertionTests.cpp  templateTest.cpp
